@@ -170,6 +170,10 @@ PHP                                                                        NEWS
   . Added nextRowset support.
   . Fixed bug #50755 (PDO DBLIB Fails with OOM).
 
+- Improved PDO MySQL:
+  . Implemented FR #47802 (Support for setting character sets in DSN strings). 
+    (Kalle)
+
 - Improved Reflection extension: (Johannes)
   . Added ReflectionExtension::isTemporary() and
     ReflectionExtension::isPersistent() methods.
